=========================================================================
CHANGE LOG
=========================================================================

2008-02-24  Warren L. DeLano <warren@delsci.com>	

	* select now applies validate_object_names to selection name
	
2008-02-23  Warren L. DeLano <warren@delsci.com>	

	* fixed a fitting bug with degenerate cases

	* various activex compatibility fixes integrated over past weeks
	
2008-02-05  Warren L. DeLano <warren@delsci.com>	

	* eliminated rare but serious bug with fog plus selections
	
2008-01-31  Warren L. DeLano <warren@delsci.com>	

	* grid_slot experimental setting
	
	* grid_mode 2 for viewng multiple states
	
2008-01-30  Warren L. DeLano <warren@delsci.com>	

	* grid_mode 1 for viewing multiple objects 
	
	* dash_color, angle_color, dihedral_color settings
	
	* surface_mode 3 and 4 added (thanks Nidhi!)
	
2008-01-29  Warren L. DeLano <warren@delsci.com>	

	* added experimental surface caching implementation

	* cache_mode experimentation setting
	
2008-01-28  Warren L. DeLano <warren@delsci.com>	

	* fixed minor compatibility bug with vrml (shininess value)
	
	* addressed performance issue when changing representations
	     for large objects with many states (e.g. 1sva.pdb1)
	
2008-01-24  Warren L. DeLano <warren@delsci.com>	

	* spacebar now advances scene when in presentation mode
	
2008-01-20  Warren L. DeLano <warren@delsci.com>	

	* additional work towards multiple PyMOLs in one Python.
	
2008-01-18  Warren L. DeLano <warren@delsci.com>	

	* improved Python 2.5 / 64-bit compatibility (PyDict_Next, etc.)

	* migrated to numpy
	
2008-01-18  Warren L. DeLano <warren@delsci.com>	

	* extensive refactoring for PyMOL2 & ActiveX
	
2008-01-16  Warren L. DeLano <warren@delsci.com>	

	* fixed surface_type=1, broken in the previous beta

	* refactored molecular surfacing routines 
	
2008-01-15  Warren L. DeLano <warren@delsci.com>	

	* ExtensionClass & sglite broke on 64 bit with Python 2.5.1 so