@@ -782,6 +782,7 @@ CSetting *SettingNewFromPyList(PyMOLGlobals *G,PyObject *list);
 #define cSetting_cache_max                  578
 #define cSetting_grid_slot                  579
 #define cSetting_grid_max                   580
+#define cSetting_cartoon_putty_transform    581
 
 /* when you add a new setting also remember:
    layer1/Setting.c
@@ -791,7 +792,7 @@ CSetting *SettingNewFromPyList(PyMOLGlobals *G,PyObject *list);
 
 /* cSetting_ss_INIT must always be last setting_index +1 */
 
-#define cSetting_INIT                       581
+#define cSetting_INIT                       582
 
 #endif
 
